--- a/index.html
+++ b/index.html
@@ -126,12 +126,11 @@
                         </div>
                         <h3 class="lh-base mb-0">of working experience as a web designer & developer</h3>
                     </div>
-                    <p class="mb-4">I'am oparaekocha Lawrita, a front-end Developer and a Graphics Designer
-                     I am a front-end  web developer, with three years experience in web development,
-                   And  in Graphics design. I've worked on variety of projects for clients in the retail and healthcare industries 
-                  I'm passionate about creating greate user experience and have a strong undastanding of usability and accessiblity. 
-                  And a highly skilled, detail-oriented graphics designer with over three years of experience.
-                  A representive design makes your website accesible to all users  regardless of their device. </p>
+                    <p class="mb-4">I'am Oparaekocha Lawrita, a front-end Developer and a Graphics Designer.
+                      With two years experience in web development and  in graphics design. I've worked on variety of projects for clients in the retail and healthcare industries.     
+                  I'm passionate about creating great user experience and have a strong understanding of usability and accessiblity. 
+                   A highly skilled, detail-oriented graphics designer with over two years of experience.
+                  Iam self-explanatory to all users regardless of their level of exposure in education. </p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Afordable Prices</p>
                     <p class="mb-3"><i class="far fa-check-circle text-pri                                                                                                                          mary me-3"></i>High Quality Product</p>
                     <p class="mb-3"><i class="far fa-check-circle text-pri              mary me-3"></i>On Time Project Delivery</p>
