--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                     <h1 class="display-5 mb-0">Team Members</h1>
                 </div>
                 <div class="col-lg-6 text-lg-end">
-                    <a class="btn btn-primary py-3 px-5" href="">Contact Us</a>
+                    <a class="btn btn-primary py-3 px-5" href="https://wa.me/message/BK7I4FBNQC4GB1">Contact Us</a>
                 </div>
             </div>
             <div class="row g-4">
